prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: prometheus 
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: prometheus 
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: prometheus
    app.openshift.io/runtime: python
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        imagePullPolicy: Always
        image: quay.io/prometheus/prometheus:latest
        # livenessProbe:
        #   failureThreshold: 3
        #   httpGet:
        #     path: /status.php
        #     port: 80
        #     scheme: HTTP
        #   initialDelaySeconds: 45
        #   periodSeconds: 10
        #   successThreshold: 1
        #   timeoutSeconds: 1
        ports:
        - containerPort: 9090
          protocol: TCP
        volumeMounts:
          - name: prometheus-data
            mountPath: /prometheus
        # readinessProbe:
        #   failureThreshold: 3
        #   httpGet:
        #     path: /status.php
        #     port: 80
        #     scheme: HTTP
        #   initialDelaySeconds: 45
        #   periodSeconds: 10
        #   successThreshold: 1
        #   timeoutSeconds: 5
      volumes: 
        - name: prometheus-data
          emptyDir: {}
